# bilancio

./: .env.example  .gitignore  Dockerfile  PRIVACY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: c0a0e12d02e7_initial_schema.py
infra/: README.md  main.bicep  parameters.prod.bicepparam
infra/modules/: containerapp.bicep  database.bicep  keyvault.bicep  monitoring.bicep  registry.bicep  storage.bicep
scripts/: inspect-xlsx.py  reset-dev.sh  test.sh
src/bilancio/: config.py  main.py
src/bilancio/api/: accounts.py  dashboard.py  health.py  imports.py  me.py  rules.py  setup.py  transactions.py
src/bilancio/auth/: dependencies.py  hashing.py
src/bilancio/categorizer/: rules_engine.py
src/bilancio/observability/: logging.py
src/bilancio/parsers/: base.py  mediobanca_premier.py  registry.py
src/bilancio/services/: account_service.py  dashboard_service.py  import_service.py  rule_service.py  transaction_service.py
src/bilancio/static/: app.css  app.js  index.html
src/bilancio/storage/: database.py  models.py
tests/: conftest.py
tests/integration/: conftest.py  test_account_service.py  test_accounts_api.py  test_auth.py  test_dashboard_api.py  test_dashboard_service.py  test_import_service.py  test_imports_api.py  test_models.py  test_rule_service.py  test_rules_api.py  test_setup_api.py  test_transaction_service.py  test_transactions_api.py
tests/unit/: test_hashing.py  test_health.py  test_mediobanca_parser.py  test_rules_engine.py
